exports[`test should render children with app prop 1`] = `
<Base
  className="terraClinical-Application">
  <div
    app={
      AppDelegateInstance {
        "closeDisclosure": undefined,
        "disclose": undefined,
        "dismiss": undefined,
        "goBack": undefined,
        "maximize": undefined,
        "minimize": undefined,
      }
    }>
    TestApp
  </div>
</Base>
`;

exports[`test should render custom properties on component 1`] = `
<Base
  className="custom-class terraClinical-Application"
  id="my-id">
  <div>
    TestApp
  </div>
</Base>
`;

exports[`test should render default component 1`] = `
<Base
  className="terraClinical-Application">
  <div>
    TestApp
  </div>
</Base>
`;
